argocd/ingress_argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-argocd
  annotations:
spec:
  ingressClassName: nginx
  rules:
    - host: argocdtriangleapp.rafaeltorices.com
      http:
        paths:
          - path: "/argocd"
            pathType: Prefix
            backend:
              service:
                name: triangle-app-argocd-server
                port:
                  name: http
  tls:
    - hosts:
        - argocdtriangleapp.rafaeltorices.com
      secretName: argocd-secret-tls
